$Id: History,v 1.16 2002-02-24 01:47:46 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/OpenGL
-------------------------------------

23rd February 2002  John Allison  (opengl-V04-00-01)
- Changes to encourage compilation on Windows in preparation for
  implementation of G4OpenGLWin32Viewer.  Removed spurious includes of
  glx.h, unistd.h and assert.h.

24th August 2001  John Allison  (vis-V03-02-13)
- Limited the printing of warnings in
  G4OpenGLSceneHandler::AddPrimitive (const G4Text& text).

14th August 2001  John Allison  (vis-V03-02-11)
- Improved KernelVisitDecision.
- Fixed a few small bugs in multiple "stored" viewers, but see next item.
- There's an outstanding bug in OpenGL Stored.  If there is more than
  one viewer controlled by a scene handler, after a ClearStore on the
  scene handler, e.g., with /vis/scene/notifyHandlers, the first
  viewer to get refreshed should trigger the display list rebuild, but
  the second need not.  However, when the second viewer's turn comes,
  the display lists are there, and are called, e.g.,
  G4OpenGLStoredXViewer::DrawView calls
  G4OpenGLStoredViewer::DrawDisplayLists that calls glCallList, but